# jh_cp

./: .cp_ignore  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  exclude-rules.ini  jh_cp.py  jh_cp.pyi  pyproject.toml  setup.py
jh_cp/: __init__.py  jh_cp.py  jh_cp.pyi
jh_cp/jh_cp_tools/: .cp_ignore
jh_cp_tools/: .cp_ignore  exclude-rules.ini
