[build-system]
requires = [
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
    "tomli>=2.0.1; python_version < '3.11'"
]
build-backend = "setuptools.build_meta"

[project]
name = "jh_cp"
version = "3.0.0"
description = "A cross-platform file copy and archive tool with .cp_ignore management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache License 2.0" }
authors = [{ name = "JeongHan Bae", email = "mastropseudo@gmail.com" }]
keywords = ["file-copy", "archive", "ignore", "cli", "automation"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JeongHan-Bae/jh_cp"
Source = "https://github.com/JeongHan-Bae/jh_cp"

[project.scripts]
jh_cp = "jh_cp.jh_cp:jh_cp_main"
